--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div>
     </div>
 
-    <script src="./jquery.min.js"></script>
+    <script src="./scripts/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
